--- a/src/components/MobileNavbar.scss
+++ b/src/components/MobileNavbar.scss
@@ -49,6 +49,7 @@
     align-items: center;
     list-style: none;
   }
+
   &__list-item {
     margin-bottom: 2rem;
     color: var(--clr-text-primary);
@@ -60,6 +61,9 @@
       cursor: pointer;
       color: var(--clr-accent);
     }
+  }
+
+  &__list-link {
   }
 }
 
